Travel::Routing::DE::DBRIS 0.08 - Fri Feb 06 2026

    * Deutsche Bahn have rolled out a rather aggressive Akamai EdgeSuite
      WAF configuration, and too-frequent requests made with this module
      may cause the corresponding IP address or range to be blocked for
      yet-to-be-determined amounts of time. Send more plausible requests
      with randomized user agent strings and additional headers to maybe
      hopefully slightly reduce the risk of this happening.
    * New dependency: UUID

Travel::Routing::DE::DBRIS 0.07 - Sat Jun 21 2025

    * dbris: Add--colour={auto,always,never}

Travel::Routing::DE::DBRIS 0.06 - Thu Feb 20 2025

    * Handle gzip-compressed bahn.de responses -- older versions of this
      module no longer work

Travel::Routing::DE::DBRIS 0.05 - Sat Feb 08 2025

    * dbris: Bump dependency version to really fix --json
    * dbris: Handle segments without duration

Travel::Routing::DE::DBRIS 0.04 - Fri Feb 07 2025

    * Connection, Segment: TO_JSON: convert DateTime and Duration objects
    * dbris: Fix --json
    * dbris: Add -a / --arrival option
    * dbris: Add -o / --with-offers option (work in progress)
    * dbris: Add --with-upsell-offers option

Travel::Routing::DE::DBRIS 0.03 - Sun Feb 02 2025

    * Connection: Add is_cancelled, is_unscheduled, is_unlikely accessors
    * Segment: Add is_unlikely and transfer_duration accessors
    * Parse and expose messages related to connections and connection segments
    * dbris: Indicate connections that include cancelled segments or
      segments that will likely not be reached due to insufficient layover
      time
    * dbris: add -j / --with-jid option
    * dbris: add -v / --verbose option

Travel::Routing::DE::DBRIS 0.02 - Tue Jan 28 2025

    * Add support for up to two stopovers
    * Add first class option (--first-class / first_class)
    * Add detailed passenger specification for price calculation
      (--passengers / passengers)
