@@ -31,8 +31,7 @@ Module::Build->new(
 		'List::Util'                          => 0,
 		'LWP::UserAgent'                      => 0,
 		'LWP::Protocol::https'                => 0,
-		'Travel::Status::DE::DBRIS'           => '0.23',
-		'Travel::Status::DE::DBRIS::Location' => '0.23',
+		'Travel::Status::DE::DBRIS'           => '0.24',
 		'UUID'                                => 0,
 	},
 	script_files => 'bin/',
