@@ -191,7 +191,6 @@ Documentation is not available in this image. Please refer to the
 
 Mirrors of the dbris / Travel::Routing::DE::DBRIS repository are available at
 
-* [Chaosdorf](https://chaosdorf.de/git/derf/travel-routing-de-dbris)
 * [Codeberg](https://codeberg.org/derf/Travel-Routing-DE-DBRIS/)
 * [Finalrewind](https://git.finalrewind.org/derf/Travel-Routing-DE-DBRIS/)
 * [GitHub](https://github.com/derf/travel-routing-de-dbris)
